syntax = "proto3";

package auth;

import "common.proto";

option go_package = "github.com/cqchien/ecomerce-rec/backend/proto";

// Auth Service - handles authentication and authorization
service AuthService {
  // Register new user
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // Login user
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // Refresh access token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  
  // Logout user
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  
  // Verify token
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
  
  // Change password
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  
  // Request password reset
  rpc RequestPasswordReset(RequestPasswordResetRequest) returns (RequestPasswordResetResponse);
  
  // Reset password
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
}

// Register request
message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message RegisterResponse {
  string user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;
}

// Login request
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string email = 2;
  string role = 3;
  string access_token = 4;
  string refresh_token = 5;
  int64 expires_in = 6;
}

// Refresh token request
message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

// Logout request
message LogoutRequest {
  string user_id = 1;
  string refresh_token = 2;
}

message LogoutResponse {
  bool success = 1;
}

// Verify token request
message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  string role = 4;
}

// Change password request
message ChangePasswordRequest {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  bool success = 1;
}

// Request password reset
message RequestPasswordResetRequest {
  string email = 1;
}

message RequestPasswordResetResponse {
  bool success = 1;
  string message = 2;
}

// Reset password
message ResetPasswordRequest {
  string email = 1;
  string reset_token = 2;
  string new_password = 3;
}

message ResetPasswordResponse {
  bool success = 1;
}
